tests/unit/language/errors/alloc_in_proc_error.arche
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "Error" %t.out
// `alloc` (dynamic allocation) is not a valid statement — it errors at parse time.

Counter :: arche {
  val :: int,
}

static pool<Counter>(5);

main :: proc() {
  alloc Counter(10);
  printf("should not reach\n");
}

